--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -408,6 +408,7 @@ header h1 img {
   margin: 0;
   background-color: var(--header-background);
   background-image: radial-gradient(var(--header-gradient-start) 0%, var(--header-gradient-end) 75%);
+  color: var(--white);
 }
 
 .search .inner {
@@ -418,16 +419,15 @@ header h1 img {
 }
 
 .search h3 {
-  margin-bottom: 30px;
+  /* margin: 0; */
   text-align: center;
-  color: white;
   font-size: 18px;
   font-weight: 600;
 }
 
 .search form {
   position: relative;
-  margin: 0 auto;
+  margin: 15px auto;
   width: 90%;
   max-width: 500px;
 }
@@ -448,12 +448,6 @@ header h1 img {
 
 .search textarea:focus {
   outline: none;
-}
-
-.search small {
-  color: var(--button-border);
-  font-style: italic;
-  margin-top: 10px;
 }
 
 .recent {
