--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -1,8 +1,8 @@
 /* Base colours ------------------------------------------------------------ */
 
 :root {
-  --very-dark-blue: #111117;
-  --dark-blue: #111930;
+  --very-dark-blue: #111930;
+  --dark-blue: #232339;
   --mid-blue: #356FCE;
   --light-blue: #BEDEFF;
   --very-light-blue: #E6F2FF;
@@ -27,6 +27,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --black: #070710;
+    --very-dark-grey: #191923;
+
     --mid-blue: #55B7FF;
     --mid-red: #FF4343;
     --dark-red: #250201;
@@ -57,8 +59,10 @@
   --input-text: var(--black);
   --input-placeholder: var(--light-grey);
 
+  --results-background: var(--white);
   --results-selected-background: var(--very-light-blue);
   --results-separator: var(--light-grey);
+  --results-shadow: rgba(100, 100, 100, 0.2);
 
   --button-background: var(--very-light-blue);
   --button-text: var(--mid-blue);
@@ -89,15 +93,18 @@
     --page-background: var(--black);
     --page-text: var(--white);
 
+    --header-background: var(--very-dark-blue);
     --header-gradient-start: rgba(255, 255, 255, 0.08);
     --header-gradient-end: rgba(255, 255, 255, 0.03);
 
-    --input-background: var(--black);
+    --input-background: var(--very-dark-grey);
     --input-text: var(--white);
-    --input-placeholder: var(--dark-grey);
+    --input-placeholder: var(--grey);
 
-    --results-selected-background: var(--very-dark-blue);
+    --results-background: var(--very-dark-grey);
+    --results-selected-background: var(--dark-blue);
     --results-separator: var(--very-dark-grey);
+    --results-shadow: rgba(20, 20, 60, 0.3);
 
     --button-background: var(--dark-blue);
     --button-text: var(--mid-blue);
@@ -481,9 +488,9 @@ header h1 img {
   width: 100%;
   max-height: 500px;
   overflow: scroll;
-  background-color: var(--page-background);
+  background-color: var(--results-background);
   border-top: 1px var(--results-separator) solid;
-  box-shadow: 0px 3px 8px 2px rgba(100, 100, 100, 0.2);
+  box-shadow: 0px 3px 8px 2px var(--results-shadow);
   z-index: 9999;
 }
 
