Tweaked the light mode green again.

--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -9,7 +9,7 @@
 
   --dark-green: #027353;
   --mid-green: #038C33;
-  --light-green: #6ACC24;
+  --light-green: #68BB13;
 
   --yellow: #F2B94F;
   --orange: #F58E36;
