--- a/Public/stylesheets/home.scss
+++ b/Public/stylesheets/home.scss
@@ -7,51 +7,60 @@
   background-color: var(--header-background);
   background-image: radial-gradient(var(--header-gradient-start) 0%, var(--header-gradient-end) 75%);
   color: var(--white);
-}
 
-.search .inner {
-  padding: 70px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  .inner {
+    padding: 70px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.search h3 {
-  /* margin: 0; */
-  text-align: center;
-  font-size: 18px;
-  font-weight: 600;
-}
+  h3 {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+  }
 
-.search form {
-  position: relative;
-  margin: 15px auto;
-  width: 90%;
-  max-width: 500px;
-}
+  form {
+    position: relative;
+    margin: 15px auto;
+    width: 90%;
+    max-width: 500px;
+  }
 
-.search textarea {
-  padding: 12px;
-  width: 100%;
-  font-size: 25px;
-  font-weight: 600;
-  line-height: 1.2;
-  border: none;
-  color: var(--input-text);
-  background-color: var(--input-background);
-  resize: none;
-  white-space: nowrap;
-  overflow: hidden;
-}
+  textarea {
+    padding: 12px;
+    width: 100%;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 1.2;
+    border: none;
+    color: var(--input-text);
+    background-color: var(--input-background);
+    resize: none;
+    white-space: nowrap;
+    overflow: hidden;
 
-.search textarea:focus {
-  outline: none;
+    &:focus {
+      outline: none;
+    }
+  }
 }
 
 .recent {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
+
+  ul {
+    padding: 0;
+  }
+
+  li {
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -61,17 +70,7 @@
   }
 }
 
-.recent ul {
-  padding: 0;
-}
-
-.recent li {
-  margin: 15px;
-  display: flex;
-  flex-direction: column;
-}
-
-/* Search results ---------------------------------------------------------- */
+/* Search results drop down */
 
 #results {
   margin-top: -5px;
@@ -83,83 +82,75 @@
   border-top: 1px var(--results-separator) solid;
   box-shadow: 0px 3px 8px 2px var(--results-shadow);
   z-index: 9999;
-}
 
-#results ul {
-  margin: 0;
-  padding: 0;
-}
+  ul {
+    margin: 0;
+    padding: 0;
+  }
 
-#results li {
-  margin: 0;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  border-bottom: 1px var(--results-separator) solid;
-}
+  li {
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px var(--results-separator) solid;
 
-#results li:last-child {
-  border: none;
-}
+    &:last-child {
+      border: none;
+    }
 
-#results li.selected {
-  background-color: var(--results-selected-background);
-}
+    &.selected {
+      background-color: var(--results-selected-background);
+    }
+  }
 
-#results div {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: baseline;
-}
+  div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+  }
 
-#results h4 {
-  display: inline;
-  margin: 0;
-  padding: 0;
-}
+  h4 {
+    display: inline;
+    margin: 0;
+    padding: 0;
+  }
 
-#results small {
-  font-size: 10px;
-}
+  small {
+    font-size: 10px;
+  }
 
-#results p {
-  margin: 5px 0 0 0;
-  font-size: 14px;
-  color: var(--page-text);
-}
+  p {
+    margin: 5px 0 0 0;
+    font-size: 14px;
+    color: var(--page-text);
+  }
 
-#results .no_results {
-  padding: 40px;
-  text-align: center;
-}
+  .no_results {
+    padding: 40px;
+    text-align: center;
+  }
 
-#results .more_results {
-  padding: 20px;
-  text-align: center;
-  font-weight: 600;
-  background-color: var(--results-separator);
-  color: var(--page-text);
-}
+  .more_results {
+    padding: 20px;
+    text-align: center;
+    font-weight: 600;
+    background-color: var(--results-separator);
+    color: var(--page-text);
+  }
 
-#results.error {
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: var(--error-text);
-  background-color: var(--error-background);
-}
+  &.error {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--error-text);
+    background-color: var(--error-background);
 
-#results.error .icon {
-  margin: 20px;
-  font-size: 40px;
-}
-
-#results.error h4 {
-  margin-bottom: 10px;
-}
-
-#results.error p {
-  margin: 0 20px;
+    .icon {
+      margin: 20px;
+      font-size: 40px;
+    }
+  }
 }
