Refactored Error page SCSS.

--- a/Public/stylesheets/error.scss
+++ b/Public/stylesheets/error.scss
@@ -1,18 +1,23 @@
-/* Error page -------------------------------------------------------------- */
-div.error {
+/* -------------------------------------------------------------------------
+  Error page.
+---------------------------------------------------------------------------- */
+
+.error {
   padding: 100px 0;
   text-align: center;
-}
 
-div.error h4 {
-  margin: 20px 0 10px 0;
-}
+  // TODO: Candidate for removal.
+  h4 {
+    margin: 20px 0 10px 0;
+  }
 
-div.error p {
-  margin: 20px 0;
-}
+  // TODO: Candidate for removal.
+  p {
+    margin: 20px 0;
+  }
 
-div.error i {
-  font-size: 35px;
-  color: var(--error-text);
+  i {
+    font-size: 35px;
+    color: var(--error-text);
+  }
 }
