Made the mobile breakpoint a variable.

--- a/Public/stylesheets/markdown.scss
+++ b/Public/stylesheets/markdown.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------
-  Markdown pages
+  Markdown pages.
 ---------------------------------------------------------------------------- */
 
 .markdown main img {
