--- a/Public/stylesheets/header_footer.scss
+++ b/Public/stylesheets/header_footer.scss
@@ -14,7 +14,7 @@ footer {
     flex-direction: row;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $mobile-breakpoint) {
     .inner,
     .inner {
       flex-direction: column;
@@ -49,7 +49,7 @@ header {
     }
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $mobile-breakpoint) {
     h1 {
       margin-bottom: 20px;
     }
@@ -77,7 +77,7 @@ footer {
     margin: 10px;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $mobile-breakpoint) {
     ul {
       flex-direction: column;
       align-items: center;
