--- a/Public/stylesheets/home.scss
+++ b/Public/stylesheets/home.scss
@@ -63,7 +63,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $mobile-breakpoint) {
   .recent {
     flex-direction: column;
     align-items: center;
