--- a/Public/stylesheets/layout.scss
+++ b/Public/stylesheets/layout.scss
@@ -15,7 +15,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $mobile-breakpoint) {
   .split {
     flex-direction: column;
     align-items: flex-start;
