Moved the margin on the license lozenge icon to be specific to the license lozenge.

--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -40,6 +40,10 @@ p.description {
   &.incompatible {
     background-color: var(--license-incompatible-background);
   }
+
+  i.icon {
+    margin-right: 7px;
+  }
 }
 
 /* Branches */
