--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -2,8 +2,15 @@
   Individual package pages.
 ---------------------------------------------------------------------------- */
 
-.package hr {
-  margin: 5px 0;
+.package {
+  h2 {
+    margin: 0;
+    padding: 0;
+  }
+
+  hr {
+    margin: 10px 0;
+  }
 }
 
 p.description {
