Moved nav styles into the header/footer where they are used.

--- a/Public/stylesheets/header_footer.scss
+++ b/Public/stylesheets/header_footer.scss
@@ -21,11 +21,28 @@ footer {
     }
   }
 
-  a {
-    color: var(--header-link-text);
+  nav {
+    ul {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: row;
 
-    &:hover {
-      color: var(--header-link-highlight);
+      li {
+        margin: 0 5px;
+        list-style: none;
+
+        a {
+          padding: 3px;
+          font-size: 15px;
+          font-weight: 600;
+          color: var(--header-link-text);
+
+          &:hover {
+            color: var(--header-link-highlight);
+          }
+        }
+      }
     }
   }
 }
