--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -11,6 +11,16 @@
   hr {
     margin: 10px 0;
   }
+
+  section.metadata{
+    li {
+      margin: 10px 0;
+
+      p {
+        margin: 10px 0;
+      }
+    }
+  }
 }
 
 p.description {
