--- a/Public/stylesheets/main.scss
+++ b/Public/stylesheets/main.scss
@@ -8,4 +8,5 @@ $mobile-breakpoint: 767px;
 @import 'home.scss';
 @import 'markdown.scss';
 @import 'package.scss';
+@import 'builds.scss';
 @import 'error.scss';
