--- a/Public/stylesheets/layout.scss
+++ b/Public/stylesheets/layout.scss
@@ -15,6 +15,10 @@
   align-items: center;
 }
 
+.right {
+  text-align: right;
+}
+
 @media screen and (max-width: $mobile-breakpoint) {
   .split {
     flex-direction: column;
