--- a/Public/stylesheets/main.scss
+++ b/Public/stylesheets/main.scss
@@ -8,5 +8,6 @@ $mobile-breakpoint: 767px;
 @import 'home.scss';
 @import 'markdown.scss';
 @import 'package.scss';
+@import 'matrix.scss';
 @import 'builds.scss';
 @import 'error.scss';
